# write_yourself_a_git

./: LICENSE  README.md  libwyag.py  pyproject.toml  wyag
guit/: classes.py  cli.py  create.py  io.py  parser.py  ref.py  repository.py  utils.py
